fix expand collapse

--- a/blogs/blocks/preflight/preflight.css
+++ b/blogs/blocks/preflight/preflight.css
@@ -3,7 +3,7 @@
   height: 600px;
   border: none;
   display: grid;
-  grid-template-rows: 75px 1fr 75px;
+  grid-template-rows: 75px 1fr 50px;
   padding: 0;
 
   --color-green: #4BB543;
